[metadata]
name = RL
version = 0.0.1
author = Cesare Magnetti
author_email = cesare.magnetti98@gmail.com
description = Some commonly used RL routines/building blocks for future use.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CesareMagnetti/RL
project_urls =
    Bug Tracker = https://github.com/CesareMagnetti/RL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src